# truba-client-gui

./: .gitignore  ACTIVE_WAVE.md  AGENTS.md  ARCHITECTURE.md  CURRENT_WAVE.md  GENERAL_CODEX_WAVE_PROMPT.md  LICENSE  MASTER_CONTEXT_ACTIVE.md  PHASE_PLAN.md  README.md  README_AGENT_WORKFLOW.md  SESSION_RULES.md  TASKS.md  TESTING.md  WAVES.md  agent_state.json  prompt  prompt-hepsi  pyproject.toml  requirements.txt  rules.md  template.slurm  wave_template.md
.github/workflows/: ci.yml  release.yml
build_release/truba-client-gui/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  truba-client-gui.pkg  (+2 more)
devtools/: README.md  performance_probe.py
dist_release/: truba-client-gui_v1.0.2_windows_onedir.zip.sha256
dist_release_fix/: CHANGELOG_v1.0.3.md  truba-client-gui_v1.0.2_fix_windows_onedir.zip.sha256
reports/: BUILD_REPORT.md  TEST_REPORT.md  WAVE_REPORT.md
runner/: local_agent.py  mcp_server.py  runner.py
scripts/: bootstrap_ollama.ps1  check_i18n.py  clean_src_pycache.py  ftp_transfer_stress.py  package_release.ps1  release.ps1  run_performance_debug.ps1  smoke_test.py  verify_local_agents.ps1
templates/: extract_iso.py  template_gpu.slurm  template_mpi.slurm
tests/: test_editor_flow.py  test_ftp_widget.py  test_jobs_outputs_scroll.py  test_local_dir_panel.py  test_lssrv_auto_refresh.py  test_optional_ssh_credentials.py  test_performance_probe.py  test_remote_accordion.py  test_remote_dir_panel_create.py  test_remote_dir_panel_sorting.py  test_runner_ollama.py  test_slurm_ssh.py  test_startup_changelog.py
(+109 files in other folders)
