[project]
name = "truba-slurm-gui"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.5", "paramiko>=3.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
truba_gui = ["assets/**/*.svg", "assets/**/*.png", "docs/*.md", "i18n/*.json"]
